--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "openai": "^6.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
