add db connection + auth

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -27,7 +27,7 @@
     "allowUnreachableCode": false
   },
   "include": [
-    "src/**/*"
+    "src/**/*",  "env.d.ts"
   ],
   "exclude": [
     "node_modules",
