--- a/server/package.json
+++ b/server/package.json
@@ -21,17 +21,26 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/documentai": "^9.4.0",
+    "bcrypt": "^6.0.0",
+    "connect-session-knex": "^5.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
     "helmet": "^7.1.0",
+    "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.15.3",
     "openai": "^6.1.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.2",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.5",
